header/about us/advisory

--- a/index.html
+++ b/index.html
@@ -6,8 +6,152 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prometei capital</title>
+    <link rel="stylesheet" href="./assets/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-123
+<div class="block">
+    <div class="menu">
+        <img src="/assets/images/logo.png" alt="logo">
+        <div class="menu_items">
+            <a>About us</a>
+            <a>Advisory business</a>
+            <a>Our Principles</a>
+            <a>Team</a>
+            <a>Contacts</a>
+        </div>
+        <button class="menu_button">Connect</button>
+    </div>
+</div>
+
+<header>
+    <div class="block">
+        <div class="centered">
+            <div class="title">
+                A Fast Growing<br>Financial Advisory Firm
+            </div>
+            <button class="button">Connect</button>
+        </div>
+    </div>
+</header>
+
+<div class="block" style="position: relative; height: 713px">
+    <div class="white_block about_us">
+        <div class="about_us_services">
+            <div class="about_us_service">
+                <img class="about_us_service_img" src="./assets/images/services/merge.png" alt="">
+                <div class="about_us_service_name">Mergers & Acquisitions</div>
+            </div>
+            <div class="about_us_services_separator"></div>
+            <div class="about_us_service">
+                <img class="about_us_service_img" src="./assets/images/services/capital_market.png" alt="">
+                <div class="about_us_service_name">Capital market transactions (Debt & Equity)</div>
+            </div>
+            <div class="about_us_services_separator"></div>
+            <div class="about_us_service">
+                <img class="about_us_service_img" src="./assets/images/services/strategy.png" alt="">
+                <div class="about_us_service_name">Strategy consulting and operations</div>
+            </div>
+        </div>
+        <div class="about_us_content">
+            <img
+                class="about_us_content_img"
+                src="./assets/images/about_us_img.png"
+                alt=""
+            >
+            <div class="about_us_content_text_wrapper">
+                <div class="about_us_content_title">
+                    About us
+                </div>
+                <div class="about_us_content_text">
+                    <p>Prometei is a well-established international independent advisory firm that specializes in providing strategic and financial advice to a diverse range of clients.</p>
+                    <p>We assist our clients in achieving their strategic objectives by offering comprehensive, globally integrated financial advisory services across various industries.</p>
+                    <p>Our dynamic advisory practice supports clients throughout the business cycle, offering expert capabilities in M&A and Strategy, Capital Structure, Capital Markets and Private Funds.</p>
+                    <p>We assemble multi-functional teams that combine deep industry knowledge and broad corporate finance experience to leverage our global capabilities. Through this collaborative approach, we assist clients in navigating complex decisions and opportunities, offering a holistic perspective and creative solutions.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="block advisory_business">
+    <div class="advisory_business_header">
+        Advisory Business
+    </div>
+    <div class="advisory_business_content">
+        <div class="advisory_business_content_row">
+            <div class="advisory_business_content_element" style="width: 439px;">
+                <div class="advisory_business_content_element_header">
+                    Merger & Acquisitions <br>and Strategy
+                </div>
+                <img
+                    class="advisory_business_content_element_icon"
+                    src="./assets/images/advisory_business/icon.svg"
+                    alt=""
+                >
+                <div class="advisory_business_content_element_icon_bg">
+
+                </div>
+                <img src="./assets/images/advisory_business/merger_bg.jpg" alt="">
+            </div>
+            <div class="advisory_business_content_element">
+                <div class="advisory_business_content_element_header">
+                    Capital Structure
+                </div>
+                <img
+                        class="advisory_business_content_element_icon"
+                        src="./assets/images/advisory_business/icon.svg"
+                        alt=""
+                >
+                <div class="advisory_business_content_element_icon_bg">
+
+                </div>
+            </div>
+            <div class="advisory_business_content_element">
+                <div class="advisory_business_content_element_header">
+                    Debt transactions
+                </div>
+                <img
+                        class="advisory_business_content_element_icon"
+                        src="./assets/images/advisory_business/icon.svg"
+                        alt=""
+                >
+                <div class="advisory_business_content_element_icon_bg">
+
+                </div>
+            </div>
+        </div>
+        <div class="advisory_business_content_row">
+            <div class="advisory_business_content_element">
+                <div class="advisory_business_content_element_header">
+                    Capital Markets <br>and Private Funds
+                </div>
+                <img
+                        class="advisory_business_content_element_icon"
+                        src="./assets/images/advisory_business/icon.svg"
+                        alt=""
+                >
+                <div class="advisory_business_content_element_icon_bg">
+
+                </div>
+            </div>
+            <div class="advisory_business_content_element">
+                <div class="advisory_business_content_element_header">
+                    Capital Markets <br>and Private Funds
+                </div>
+                <img
+                        class="advisory_business_content_element_icon"
+                        src="./assets/images/advisory_business/icon.svg"
+                        alt=""
+                >
+                <div class="advisory_business_content_element_icon_bg">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
