--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
     <header>
         <div class="block">
             <div class="centered">
-                <div class="title">
+                <div class="title font_head_xxxl pc_only">
                     A Fast Growing<br>Financial Advisory Firm
+                </div>
+                <div class="title font_head_xxl mobile_only">
+                    A Fast Growing Financial Advisory&nbspFirm
                 </div>
 
                 <a href="#connect">
@@ -58,7 +61,7 @@
                 <div class="about_us_services_separator"></div>
                 <div class="about_us_service">
                     <img class="about_us_service_img" src="./assets/images/services/capital_market.png" alt="">
-                    <div class="about_us_service_name">Capital market transactions (Debt & Equity)</div>
+                    <div class="about_us_service_name">Capital market transactions (Debt&nbsp;&&nbsp;Equity)</div>
                 </div>
                 <div class="about_us_services_separator"></div>
                 <div class="about_us_service">
@@ -194,7 +197,7 @@
                 <div class="our_principles_content_image_wrapper">
                     <img class="our_principles_content_image" src="./assets/images/our_principles/torch.png" alt="">
                 </div>
-                <div class="our_principles_content_left">
+                <div class="our_principles_content_left pc_only">
                     <div class="our_principles_content_item">
                         <div class="our_principles_content_item_title">
                             Result oriented
@@ -231,7 +234,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="our_principles_content_right">
+                <div class="our_principles_content_right pc_only">
                     <div class="our_principles_content_item our_principles_content_item_right">
                         <div class="our_principles_content_item_title">
                             Attention to details
@@ -267,13 +270,84 @@
                         </div>
                     </div>
                 </div>
+                <div class="our_principles_content_left mobile_only">
+                    <div class="our_principles_content_item">
+                        <div class="our_principles_content_item_title">
+                            Result oriented
+                        </div>
+                        <div class="our_principles_content_item_line" style="width: calc(100% - 83px);"></div>
+                        <div class="our_principles_content_item_text">
+                            We focus on outcome rather than <br>
+                            process used to deliver a service
+                        </div>
+                    </div>
+                    <div class="our_principles_content_item our_principles_content_item_right">
+                        <div class="our_principles_content_item_title">
+                            Attention to details
+                        </div>
+                        <div class="our_principles_content_item_line" style="width: calc(100% - 50px);"></div>
+                        <div class="our_principles_content_item_text">
+                            Our expertise in negotiations, advisory, structuring, <br>
+                            valuation and funding is built on experience with <br>
+                            world standards in financing sector
+                        </div>
+                    </div>
+                    <div class="our_principles_content_item">
+                        <div class="our_principles_content_item_title">
+                            Trouble Shooting
+                        </div>
+                        <div class="our_principles_content_item_line" style="width: calc(100% - 62px);"></div>
+                        <div class="our_principles_content_item_text">
+                            We are thinking outside the box to comprehend<br>
+                            the implementation of an unusual approach to<br>
+                            the logical thinking structure to solve any<br>
+                            problem
+                        </div>
+                    </div>
+                    <div class="our_principles_content_item our_principles_content_item_right">
+                        <div class="our_principles_content_item_title">
+                            Client-focused <br>and tailor made approach
+                        </div>
+                        <div class="our_principles_content_item_line" style="width: calc(100% - 23px);"></div>
+                        <div class="our_principles_content_item_text">
+                            We approach all projects with great enthusiasm <br>and involve top-tier experts from different areas
+                        </div>
+                        <div class="our_principles_content_item_text">
+                            We focus on transaction support, <br>proper reporting and negotiations
+                        </div>
+                    </div>
+                    <div class="our_principles_content_item">
+                        <div class="our_principles_content_item_title">
+                            Materials Preparation
+                        </div>
+                        <div class="our_principles_content_item_line" style="width: calc(100% - 19px);"></div>
+                        <div class="our_principles_content_item_text">
+                            Marketing materials (Teaser, Management presentation,<br>
+                            Financial model, materials for BoD, etc.)
+                        </div>
+                        <div class="our_principles_content_item_text">
+                            Legal documentation
+                        </div>
+                    </div>
+                    <div class="our_principles_content_item our_principles_content_item_right">
+                        <div class="our_principles_content_item_title">
+                            Best Practice
+                        </div>
+                        <div class="our_principles_content_item_line" style="width: calc(100% - 6px);"></div>
+                        <div class="our_principles_content_item_text">
+                            Our expertise in negotiations, advisory, structuring, <br>
+                            valuation and funding is built on experience with world <br>
+                            standards in financing sector
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <div id="team" class="block">
         <div class="white_block team">
-            <div class="team_title">
+            <div class="team_title pc_only">
                 Prometei Team
             </div>
             <div class="team_list">
