--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     A Fast Growing<br>Financial Advisory Firm
                 </div>
                 <div class="title font_head_xxl mobile_only">
-                    A fast growing financial advisory&nbsp;firm
+                    A fast growing<br>financial<br>advisory&nbsp;firm
                 </div>
 
                 <a href="#connect">
